# SkyDetector

./: .gitignore  CMakeLists.txt  README.md
include/: LineEdit.h  SLIC.h  SPixel.h  SkyDetect.h  SkyDetectorController.h  SkyDetectorDialog.h  SkyDetectorThread.h  SpinBox.h  constants.h
src/: LineEdit.cpp  SLIC.cpp  SPixel.cpp  SkyDetect.cpp  SkyDetect.cpp.autosave  SkyDetectorController.cpp  SkyDetectorDialog.cpp  SkyDetectorThread.cpp  SpinBox.cpp  main.cpp
